packages/svelte/tests/compiler-errors/samples/runes-before-after-update/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'runes_mode_invalid_import',
		message: 'beforeUpdate cannot be used in runes mode'
	}
});
